compiler/testData/diagnostics/tests/smartCasts/smartCastWithOrFalse.fir.kt
fun main(x: Any?) {
    if (x is String || false) {
        x.<!UNRESOLVED_REFERENCE!>length<!>
    }
    else {
        x.<!UNRESOLVED_REFERENCE!>length<!>
    }
}